# Simple-Logistic-System

./: .gitignore  LICENSE  README.md
back/: CMakeLists.txt  docker-compose.yml  main.cpp
back/app/: .gitignore  Dockerfile  LICENSE  README.md  app.cabal  index.ts  package-lock.json  package.json  package.yaml  stack.yaml  tsconfig.json
back/app/app/: Main.hs
back/app/src/: Server.hs  Users.hs  controller.ts  model.ts  r.ts  routes.ts  server.ts
back/app/tests/: api.test.ts  identity.test.ts  infrastructure.test.ts  inventory.test.ts  transactions.test.ts
back/benchmarks/: CMakeLists.txt  bench_simple.cpp
back/db/: db.sql  dbdocumentation.md  documentation.md  fill_mock_data.sql
back/db/Data(CSV)/: freights.csv  online_users.csv  products.csv  users.csv
back/db/UML/: scheme.md
back/db/data/: order_items.csv  order_route.csv  suppliers.csv  truck_cargo.csv  warehouse_cargo.csv
back/db/data/nodes/: orders.csv  truck_cargo.csv  truck_model.csv  trucks.csv  warehouse_cargo.csv  warehouses.csv
back/db/queries/: freights_costs.sql  orders.sql  orders_items.sql  orders_routes.sql  products.sql  suppliers.sql  supplies_routes.sql  trucks.sql  users.sql  warehouses.sql
back/db/queries/freight_cost/: count_freight_costs.sql  create_freight_cost.sql  get_all_freight_costs.sql  get_freight_cost.sql  get_freight_cost_data.sql
back/db/queries/online_users/: count_online_users_by_role.sql  get_all_online_users.sql  get_online_user.sql  get_online_user_data.sql  online_user_delete.sql
back/db/queries/orders/: get_orders_by_sender.sql  order_delete.sql  order_find_by_product.sql  order_get_all_freight_costs.sql  order_get_all_items.sql  order_get_cancelled.sql  order_get_delivered.sql  order_get_freight_cost.sql  order_get_items.sql  order_get_pending.sql  order_get_shipped.sql  order_get_supplier_delivered.sql  order_get_supplier_orders.sql  order_update.sql  rder_get_by_status.sql
back/db/queries/orders_items/: count_order_items_by_order.sql  count_order_items_by_product.sql  delete_order_item.sql  get_order_product_quantity.sql
back/db/queries/orders_route/: orders_route_create.sql  orders_route_delete.sql  orders_route_get_all.sql  orders_route_get_arrived.sql  orders_route_get_by_order.sql  orders_route_get_by_step.sql  orders_route_get_by_truck.sql  orders_route_update.sql
back/db/queries/products/: product_delete.sql  product_find_by_weight.sql  product_get_by_id.sql  product_get_expirable_items.sql  product_get_orders.sql  product_update.sql
back/db/queries/suppliers/: count_suppliers_by_location.sql  delete_supplier.sql  get_all_suppliers.sql  get_supplier.sql  get_supplier_data.sql
back/db/queries/supplies_routes/: count_supplies_route_by_order.sql  delete_supplies_route.sql  get_all_supplies_route.sql  get_supplies_route_by_supplier.sql  update_supplies_route.sql
back/db/queries/truck_cargo/: count_truck_cargo_by_product.sql  count_truck_cargo_by_truck.sql  create_truck_cargo.sql  get_all_trucks_cargo.sql  get_truck_cargo.sql  get_truck_cargo_by_product.sql  get_truck_cargo_by_truck.sql
back/db/queries/trucks/: get_truck_data.sql  get_trucks_by_model.sql  get_trucks_by_size.sql  truck_create.sql  truck_delete.sql  truck_find_by_weight_capacity.sql  truck_find_refrigerated_by_volume_capacity.sql  truck_find_refrigerated_by_weight_capacity.sql  truck_get_at_warehouse.sql  truck_get_currently_delivering.sql  truck_get_destination.sql  truck_get_no_valid_trucks.sql  truck_get_refrigerated.sql  truck_get_refrigerated_delivering.sql  truck_get_valid_trucks.sql
back/db/queries/users/: count_users_by_role.sql  get_user_for_auth.sql  get_users_by_role.sql
back/db/queries/warehouses/: get_warehouse.sql  warehouse_calculate_used_volume.sql  warehouse_create.sql  warehouse_find_cold_storage.sql  warehouse_find_empty.sql  warehouse_get_all.sql  warehouse_get_sorted_by_free_volume.sql  warehouse_update.sql
back/db/queries/warehouses_stocks/: delete_warehouse_stock.sql  get_stock_by_product.sql  get_warehouse_product_quantity.sql
back/db/scripts/: constraints.cypher  indexes.cypher  nodes.cypher  relationships.cypher  reset.cypher  seed.cypher
back/src/: App.cpp  App.h  CMakeLists.txt  Controller.cpp  Controller.h  QueryProcessor.cpp  QueryProcessor.h  main.cpp
back/src/auth/: AuthHandlers.cpp  AuthHandlers.h  jwt_hs256.cpp  jwt_hs256.h
back/tests/: CMakeLists.txt  QueryProcessor.cpp  simple_test.cpp
db/: database.sql  databasedocumentation.txt  db.db  dbdocumentation.md  fill_mock_data.sql  scheme.md
front/: .env.example  FRONTEND_PLAN.md  package-lock.json  package.json
raku_db_poc/: concept.md  cronjob.sh  queue.json  sync_db.raku
valhalla_map/: README.md  (+1 more)
(+131 files in other folders)
